test/syntax/05-type_specifier-4-err.c
// ======================================================================

/* type_specifier -> type */

// ======================================================================

i;      // error: no type

void main(void)
{
  char c;

}

// ======================================================================
